--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,7 +76,15 @@ body {
 iframe{
   position: relative;
   width: 100%;
+  height: 250px;
 }
+
+#youtubePlayerInfoBox{
+  position: relative;
+  width: 100%;
+  height: 40%;
+  background-color: lightblue;
+} 
 
 #home-screen{
   position: absolute;
